--- a/index.ipynb
+++ b/index.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "50"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
     "if number_50 > 100:\n",
     "    my_number=100\n",
     "    # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
-    "elif number_50 > 50:\n",
+    "elif number_50 >= 50:\n",
     "    my_number=50\n",
     "    # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
     "else:\n",
