--- a/index.ipynb
+++ b/index.ipynb
@@ -69,6 +69,8 @@
     "is_it_hot = None\n",
     "if temperature > 80:\n",
     "    is_it_hot=\"It is so hot out!\"\n",
+    "else:\n",
+    "    is_it_\n",
     "# conditionals go here"
    ]
   },
