--- a/index.ipynb
+++ b/index.ipynb
@@ -61,11 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is nothing! Bring on the heat!'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "temperature = 85\n",
+    "temperature = 79\n",
     "is_it_hot = None\n",
     "if temperature > 80:\n",
     "    is_it_hot=\"It is so hot out!\"\n",
