--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,9 @@
     "if today_is = 2:\n",
     "    day_of_the_week=\"Monday\"\n",
     "if today_is = 3:\n",
-    "    day_of_the_we\n",
+    "    day_of_the_week=\"Tuesday\"\n",
+    "if today_is = 4:\n",
+    "    day_of_\n",
     "# conditionals go here"
    ]
   },
