Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "if today_is = 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
     "if today_is = 4:\n",
-    "    day_of_\n",
+    "    day_of_the_week=\"Wednesday\"\n",
+    "if today_i\n",
     "# conditionals go here"
    ]
   },
