Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,9 @@
     "    day_of_the_week=\"Tuesday\"\n",
     "if today_is = 4:\n",
     "    day_of_the_week=\"Wednesday\"\n",
-    "if today_i\n",
+    "if today_is = 5:\n",
+    "    day_of_the_week=\"Thursday\"\n",
+    "if \n",
     "# conditionals go here"
    ]
   },
