--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,8 @@
     "    day_of_the_week=\"Wednesday\"\n",
     "if today_is = 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
-    "if \n",
+    "if today_is = 6:\n",
+    "    day_of_the_week=\"\"\n",
     "# conditionals go here"
    ]
   },
