--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,8 @@
     "if today_is = 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
     "if today_is = 6:\n",
-    "    day_of_the_week=\"\"\n",
+    "    day_of_the_week=\"Friday\"\n",
+    "\n",
     "# conditionals go here"
    ]
   },
