Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     "    day_of_the_week=\"Thursday\"\n",
     "if today_is = 6:\n",
     "    day_of_the_week=\"Friday\"\n",
-    "\n",
+    "if today_is = \n",
     "# conditionals go here"
    ]
   },
