--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,8 @@
     "    day_of_the_week=\"Thursday\"\n",
     "if today_is = 6:\n",
     "    day_of_the_week=\"Friday\"\n",
-    "if today_is = \n",
+    "else:\n",
+    "    day_of_the_week\n",
     "# conditionals go here"
    ]
   },
