--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
     "if today_is = 6:\n",
     "    day_of_the_week=\"Friday\"\n",
     "else:\n",
-    "    day_of_the_week\n",
+    "    day_of_the_week = \"Saturday\"\n",
     "# conditionals go here"
    ]
   },
