--- a/index.ipynb
+++ b/index.ipynb
@@ -97,9 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Saturday'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
@@ -119,7 +130,7 @@
     "    day_of_the_week = \"Saturday\"\n",
     "    \n",
     "\n",
-    "\n",
+    "day_of_the_week\n",
     "# conditionals go here"
    ]
   },
