--- a/index.ipynb
+++ b/index.ipynb
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Saturday'"
+       "str"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
     "    day_of_the_week = \"Saturday\"\n",
     "    \n",
     "\n",
-    "day_of_the_week\n",
+    "type(day_of_the_week)\n",
     "# conditionals go here"
    ]
   },
