--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     "    day_of_the_week = \"Saturday\"\n",
     "    \n",
     "\n",
-    "type(day_of_the_week)\n",
+    "day_of_the_week\n",
     "# conditionals go here"
    ]
   },
