--- a/index.ipynb
+++ b/index.ipynb
@@ -97,24 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "'Saturday'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "today_is = 4\n",
+    "today_is = int(4)\n",
     "day_of_the_week = None\n",
-    "if today_is == 1:\n",
+    "if today_is == int1:\n",
     "    day_of_the_week=\"Sunday\"\n",
     "if today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
