--- a/index.ipynb
+++ b/index.ipynb
@@ -112,9 +112,9 @@
     }
    ],
    "source": [
-    "today_is = int(4)\n",
+    "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is == int1:\n",
+    "if today_is == \"int(\"1:\n",
     "    day_of_the_week=\"Sunday\"\n",
     "if today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
