--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "'Saturday'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,13 +114,13 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is == \"1\":\n",
+    "if today_is = \"1\":\n",
     "    day_of_the_week=\"Sunday\"\n",
     "if today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
     "if today_is == 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
-    "if today_is == \"4:\n",
+    "if today_is == \"4\":\n",
     "    day_of_the_week=\"Wednesday\"\n",
     "if today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
