--- a/index.ipynb
+++ b/index.ipynb
@@ -97,30 +97,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Saturday'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-54811b8eab6a>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-54811b8eab6a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if today_is = \"1\":\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if today_is = \"1\":\n",
+    "if today_is == \"1\":\n",
     "    day_of_the_week=\"Sunday\"\n",
     "if today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
     "if today_is == 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
-    "if today_is == \"4\":\n",
+    "if today_is = \"4\":\n",
     "    day_of_the_week=\"Wednesday\"\n",
     "if today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
