--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "    day_of_the_week=\"Monday\"\n",
     "if today_is == 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
-    "if today_is = \"4\":\n",
+    "if today_is ==4:\n",
     "    day_of_the_week=\"Wednesday\"\n",
     "if today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
