--- a/index.ipynb
+++ b/index.ipynb
@@ -114,15 +114,15 @@
     "day_of_the_week = None\n",
     "if today_is == 1:\n",
     "    day_of_the_week=\"Sunday\"\n",
-    "if today_is == 2:\n",
+    "else if today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
-    "if today_is == 3:\n",
+    "else if today_is == 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
-    "if today_is ==4:\n",
+    "else if today_is ==4:\n",
     "    day_of_the_week=\"Wednesday\"\n",
-    "if today_is == 5:\n",
+    "else if today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
-    "if today_is == 6:\n",
+    "else if today_is == 6:\n",
     "    day_of_the_week=\"Friday\"\n",
     "else:\n",
     "    day_of_the_week = \"Saturday\"\n",
