--- a/index.ipynb
+++ b/index.ipynb
@@ -114,11 +114,11 @@
     "day_of_the_week = None\n",
     "if today_is == 1:\n",
     "    day_of_the_week=\"Sunday\"\n",
-    "else if today_is == 2:\n",
+    "elif today_is == 2:\n",
     "    day_of_the_week=\"Monday\"\n",
-    "else if today_is == 3:\n",
+    "elif today_is == 3:\n",
     "    day_of_the_week=\"Tuesday\"\n",
-    "else if today_is ==4:\n",
+    "elif today_is ==4:\n",
     "    day_of_the_week=\"Wednesday\"\n",
     "else if today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
