--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "    day_of_the_week=\"Tuesday\"\n",
     "elif today_is ==4:\n",
     "    day_of_the_week=\"Wednesday\"\n",
-    "else if today_is == 5:\n",
+    "elif today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
     "else if today_is == 6:\n",
     "    day_of_the_week=\"Friday\"\n",
