--- a/index.ipynb
+++ b/index.ipynb
@@ -97,16 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-c5491913fc0e>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-c5491913fc0e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else if today_is == 2:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,7 +124,7 @@
     "    day_of_the_week=\"Wednesday\"\n",
     "elif today_is == 5:\n",
     "    day_of_the_week=\"Thursday\"\n",
-    "else if today_is == 6:\n",
+    "elif today_is == 6:\n",
     "    day_of_the_week=\"Friday\"\n",
     "else:\n",
     "    day_of_the_week = \"Saturday\"\n",
